--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.9.0"
-  }
+    "main": "app.js",
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "dependencies": {
+        "express": "^4.18.2",
+        "firebase": "^9.17.1",
+        "firebase-admin": "^11.5.0",
+        "nodemon": "^2.0.20",
+        "pg": "^8.9.0"
+    }
 }
