--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
         "start": "nodemon app.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "firebase": "^9.18.0",
         "firebase-admin": "^11.5.0",
